--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "artisan clean": "php artisan config:cache && php artisan cache:clear && php artisan view:clear"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
